# opssat-orbitai

./: .gitignore  .gitmodules  README.md  scikit_tests.ipynb
Boost/: README.md
Mochi/: .gitignore  MOCHI.md  Makefile  README.md  results.txt  runall_examples.sh  test_server.sh
Mochi/src/: Constants.hpp  HyperParameters.cpp  HyperParameters.hpp  MochiMochiProxy.cpp  MochiMochiProxy.hpp  OrbitAI_Mochi.cpp  PropertiesParser.cpp  PropertiesParser.hpp  SocketServer.cpp  SocketServer.hpp  Utils.hpp  accuracy.py  generate.py  plots.R
Mochi/test_data/: camera_large.txt  camera_small.txt  camera_tiny.txt  camera_tiny2.txt  camera_train_and_infer_large.txt  camera_train_and_infer_small.txt  camera_validation_small.txt  epoch_accuracies.csv  generated.txt  generated_C.txt
Mochi/tools/: README.md  analyze.py  benchmark.sh  generate.py  inference.sh
RandomForest/: .gitignore  Makefile  README.md
RandomForest/src/: OrbitAI_ranger.cpp
RandomForest/test_data/: test_data.csv  training_data.csv
app/: .gitignore  CMakeLists.txt  README.md  clean.sh  orbitai.cpp  results.txt  runall.sh
ipk/: README.md  create_ipk_zip.sh
nmf/space-app/: .classpath  .gitignore  .project  README.md  pom.xml
pub/: README.md
pub/Rscripts/: balanced_accuracies.R  balanced_accuracies_ground.R  feature_spaces.R
pub/monitoring/: README.md
pub/results/: OPERATIONS.md  README.md
ranger/: README.md
results/: OPERATIONS.md  README.md  RESULTS.md  passes.txt
results/data/: README.md  data_2021-04-16_17-17-36 _headerfix.csv  data_2021-04-16_17-17-36.csv  (+14 more)
sandbox/: scikit_tests.ipynb
(+704 files in other folders)
